style.css
@import url("https://use.typekit.net/jmk3xov.css");

html, body{
  max-width: 100% !important;
  overflow-x: hidden !important;
}

canvas {
  position: fixed;
  top: 0;
  left: 0;
}

:root {
  --dark-bg: rgba(15, 15, 15, 0.7);
  --spacing: 350px;
  font-family: brandon-grotesque, sans-serif;
  font-weight: 400;
  font-style: normal;
}


main {
  width: 100vw;
  color: white;
  z-index: 99;
  position: absolute;
  width: 100%;
  padding: 120px 0px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

h1, h2, h3, blockquote {
  font-family: elevon, sans-serif;
  font-weight: 700;
  font-style: normal;
}

canvas {
  position: fixed;
  top: 0;
  left: 0;
}

header {
  background: var(--dark-bg);
  font-size: 2.5rem;
  padding: 2rem;
  margin-bottom: var(--spacing);
  border-radius: 25px;
}

section {
  padding: 1.3rem;
  background: var(--dark-bg);
  font-size: 1.25rem;
  line-height: 1.5;
  margin-bottom: var(--spacing);
  border-radius: 25px;
  width: 80%;
}

blockquote {
  text-align: center;
  padding: 0;
  margin-bottom: var(--spacing);
}

blockquote p {
  color: black;
  background-color: white;
  font-size: 4rem;
  display: inline;
  line-height: 1;
}

a{
  color: orangered
}

.media {
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.media a img {
  padding: 5px;
  height: 50px;
  width: 50px;
  filter: invert(100%); 
}

.left {
  grid-column: 6 / 12;
}

.bio-deeper-stuff {
  height: 0;
  overflow: hidden;
  opacity: 0;
  background-color: black;
  padding: 0.5rem;
  transition: opacity 1s ease-in-out;
  -webkit-transition: opacity 1s ease-in-out;
}

.active {
  opacity: 1;
  height: auto;
}

